# life-os

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py  utils.py
config/settings/: base.py  dev.py  prod.py
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_remove_customuser_username.py  0004_alter_customuser_managers.py
core/templates/core/: login.html  pagina_inicial.html  perfil.html
entretenimentos/: admin.py  forms.py  models.py  urls.py  views.py
entretenimentos/migrations/: 0001_initial.py  0002_alter_entretenimento_criado_por_and_more.py
entretenimentos/templates/entretenimentos/: entretenimento_create.html  entretenimento_detail.html  entretenimento_list.html
entretenimentos/tests/: test_models.py
notificacoes/: services.py
static/css/: style.css
static/js/: script.js
tarefas/: admin.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
tarefas/management/commands/: verificar_atrasos.py
tarefas/migrations/: 0001_initial.py  0002_alter_tarefa_prioridade.py  0003_tarefa_concluido_em.py  0004_tarefa_usuario.py  0005_rename_usuario_tarefa_criador.py  0006_subtarefa.py  0007_alter_comentario_comentario.py  0008_alter_comentario_comentario.py
tarefas/static/css/: style.css
tarefas/templates/tarefas/: comentario_create.html  comentario_list.html  (+6 more)
tarefas/tests/: test_models.py  tests_models.py
templates/: base.html
templates/partials/: messages.html  navbar.html
templates/two_factor/: _base.html
(+2 files in other folders)
